TINY-3437: Fixed advcode not wrapping, due to the body content being unable to shrink

--- a/src/less/theme/components/dialog/dialog.less
+++ b/src/less/theme/components/dialog/dialog.less
@@ -139,6 +139,7 @@
     font-style: @dialog-body-font-style;
     font-weight: @dialog-body-font-weight;
     line-height: @dialog-body-line-height;
+    min-width: 0;
     padding: @dialog-body-padding;
     text-align: @dialog-body-text-align;
     text-transform: @dialog-body-text-transform;
